--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/main/Dotnet.gitignore
 .vs
+.vscode
 # Build results
 [Dd]ebug/
 [Dd]ebugPublic/
