Refactoriza la configuración de la base de datos y actualiza el método de inicialización

--- a/Application/Config/appsettings.json
+++ b/Application/Config/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=MyDatabase;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "InMemoryConn": "Data Source=InMemoryDb;Mode=Memory;Cache=Shared"
   },
   "AllowedHosts": "*"
 }
